--- a/src/WpfRiotSlider/Themes/Generic.xaml
+++ b/src/WpfRiotSlider/Themes/Generic.xaml
@@ -1,9 +1,10 @@
 <ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
+    xmlns:james="https://jamesnet.dev/xaml/presentation"
     xmlns:local="clr-namespace:WpfRiotSlider">
 
-    <Geometry x:Key="RhombusSplitOutline">
+    <Geometry x:Key="ThumbPath">
         M12 2C11.5 2 11 2.19 10.59 2.59L2.59 10.59C1.8 11.37 1.8 12.63 2.59 13.41L10.59 21.41C11.37 22.2 12.63 22.2 13.41 21.41L21.41 13.41C22.2 12.63 22.2 11.37 21.41 10.59L13.41 2.59C13 2.19 12.5 2 12 2M12 4L15.29 7.29L12 10.59L8.71 7.29L12 4M7.29 8.71L10.59 12L7.29 15.29L4 12L7.29 8.71M16.71 8.71L20 12L16.71 15.29L13.41 12L16.71 8.71M12 13.41L15.29 16.71L12 20L8.71 16.71L12 13.41Z
     </Geometry>
 
@@ -25,44 +26,35 @@
         <GradientStop Color="#684E23" Offset="1"/>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="SLD.FILL" StartPoint="0, 0.5" EndPoint="1, 0.5">
+    <LinearGradientBrush x:Key="SelectionColor" StartPoint="0, 0.5" EndPoint="1, 0.5">
         <GradientStop Color="#463714" Offset="0"/>
         <GradientStop Color="#58471D" Offset="0.5"/>
         <GradientStop Color="#695625" Offset="1"/>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="SLD.FILL.OVER" StartPoint="0, 0.5" EndPoint="1, 0.5">
+    <LinearGradientBrush x:Key="SelectionOver" StartPoint="0, 0.5" EndPoint="1, 0.5">
         <GradientStop Color="#795B28" Offset="0"/>
         <GradientStop Color="#C1963B" Offset="0.5"/>
         <GradientStop Color="#C8AA6D" Offset="1"/>
     </LinearGradientBrush>
 
-    <LinearGradientBrush x:Key="SLD.FILL.DRAG" StartPoint="0, 0.5" EndPoint="1, 0.5">
+    <LinearGradientBrush x:Key="SelectionDrag" StartPoint="0, 0.5" EndPoint="1, 0.5">
         <GradientStop Color="#685524" Offset="0"/>
         <GradientStop Color="#55441B" Offset="0.5"/>
         <GradientStop Color="#463714" Offset="1"/>
     </LinearGradientBrush>
 
-    <Style TargetType="{x:Type Thumb}" x:Key="IN.THUMB">
-        <Setter Property="OverridesDefaultStyle" Value="True"/>
-        <Setter Property="VerticalAlignment" Value="Center"/>
-        <Setter Property="Focusable" Value="False"/>
+    <SolidColorBrush x:Key="RightRangeColor" Color="#1E2328"/>
+
+    <Style TargetType="{x:Type Thumb}" x:Key="SliderThumb">
+        <Setter Property="Background" Value="Transparent"/>
+        <Setter Property="Width" Value="24"/>
+        <Setter Property="Height" Value="24"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type Thumb}">
-                    <Grid HorizontalAlignment="Center"
-					      VerticalAlignment="Center"
-					      UseLayoutRounding="True"
-					      Background="Transparent">
-                        <Viewbox Width="24" Height="24">
-                            <Path x:Name="path" 
-							      Data="{StaticResource RhombusSplitOutline}"
-							      Fill="{StaticResource ThumbFill}"
-							      Width="24"
-							      Height="24"
-							      Margin="0 0 0 0">
-                            </Path>
-                        </Viewbox>
+                    <Grid Background="{TemplateBinding Background}">
+                        <Path x:Name="path" Data="{StaticResource ThumbPath}" Fill="{StaticResource ThumbFill}"/>
                     </Grid>
                     <ControlTemplate.Triggers>
                         <Trigger Property="IsMouseOver" Value="true">
@@ -71,82 +63,41 @@
                         <Trigger Property="IsDragging" Value="true">
                             <Setter TargetName="path" Property="Fill" Value="{StaticResource ThumbFillDrag}" />
                         </Trigger>
-                        <DataTrigger Binding="{Binding RelativeSource={RelativeSource AncestorType=Slider}, Path=IsEnabled}" Value="false">
-                            <Setter Property="IsEnabled" Value="False"/>
-                        </DataTrigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="path" Property="Fill" Value="#5C5B67"/>
-                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
-
+    
+    <Thumb x:Key="Thumb" Style="{StaticResource SliderThumb}"/>
+        
     <Style TargetType="{x:Type local:RiotSlider}">
-        <Setter Property="MinHeight" Value="26" />
-        <Setter Property="MaxHeight" Value="26" />
-        <Setter Property="Width" Value="200" />
-        <Setter Property="Height" Value="26" />
-        <Setter Property="Margin" Value="0,20,0,0" />
-        <Setter Property="HorizontalAlignment" Value="Center" />
+        <Setter Property="Background" Value="Transparent"/>
         <Setter Property="IsMoveToPointEnabled" Value="True"/>
         <Setter Property="AutoToolTipPlacement" Value="TopLeft"/>
         <Setter Property="IsSnapToTickEnabled" Value="True"/>
-        <Setter Property="TickFrequency" Value="0.01"/>
-        <Setter Property="SmallChange" Value="0.01"/>
-        <Setter Property="LargeChange" Value="0.01"/>
+        <Setter Property="TickFrequency" Value="10"/>
         <Setter Property="Minimum" Value="0"/>
         <Setter Property="Maximum" Value="100"/>
-        <Setter Property="Focusable" Value="False"/>
-        <Setter Property="Stylus.IsPressAndHoldEnabled" Value="false"/>
-        <Setter Property="SelectionStart" Value="{Binding Path=Minimum, RelativeSource={RelativeSource Self}}"/>
-        <Setter Property="SelectionEnd" Value="{Binding Path=Value, RelativeSource={RelativeSource Self}}"/>
+        <Setter Property="SelectionStart" Value="{Binding RelativeSource={RelativeSource Self}, Path=Minimum}"/>
+        <Setter Property="SelectionEnd" Value="{Binding RelativeSource={RelativeSource Self}, Path=Value}"/>
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="{x:Type local:RiotSlider}">
-                    <Border x:Name="border" 
-                            Background="Transparent" 
-                            SnapsToDevicePixels="True">
-                        <Grid Height="{Binding RelativeSource={RelativeSource AncestorType=local:RiotSlider}, Path=MinHeight}">
-                            <DockPanel LastChildFill="True">
-                                <Border x:Name="PART_SelectionRange" 
-                                        Height="2.5" 
-                                        ClipToBounds="True" 
-                                        Visibility="Visible">
-                                    <Rectangle x:Name="sliderBar" 
-                                               Margin="4 0 -4 0" 
-                                               RadiusX="1" 
-                                               RadiusY="1" 
-                                               Fill="{StaticResource SLD.FILL}"/>
-                                </Border>
-                                <Border Height="2.5" 
-                                        ClipToBounds="True"
-                                        Visibility="Visible">
-                                    <Rectangle x:Name="PART_NegativeSelection" 
-                                               Margin="8 0 4 0" 
-                                               RadiusX="1" 
-                                               RadiusY="1" 
-                                               Fill="#1E2328"/>
-                                </Border>
-                            </DockPanel>
-                            <Track x:Name="PART_Track">
-                                <Track.Thumb>
-                                    <Thumb x:Name="thumb" Style="{StaticResource IN.THUMB}"/>
-                                </Track.Thumb>
-                            </Track>
-                        </Grid>
-                    </Border>
+                    <Grid Background="{TemplateBinding Background}">
+                        <james:JamesGrid Rows="*" Columns="Auto, *" Height="2.5">
+                            <Border Background="{StaticResource SelectionColor}" x:Name="PART_SelectionRange"/>
+                            <Border Background="{StaticResource RightRangeColor}"/>
+                        </james:JamesGrid>
+                        <Track x:Name="PART_Track" Thumb="{StaticResource Thumb}"/>
+                    </Grid>
                     <ControlTemplate.Triggers>
-                        <DataTrigger Binding="{Binding ElementName=thumb, Path=IsMouseOver}" Value="true">
-                            <Setter TargetName="sliderBar" Property="Fill" Value="{StaticResource SLD.FILL.OVER}"/>
+                        <DataTrigger Binding="{Binding ElementName=PART_Track, Path=Thumb.IsMouseOver}" Value="true">
+                            <Setter TargetName="PART_SelectionRange" Property="Background" Value="{StaticResource SelectionOver}"/>
                         </DataTrigger>
-                        <DataTrigger Binding="{Binding ElementName=thumb, Path=IsDragging}" Value="true">
-                            <Setter TargetName="sliderBar" Property="Fill" Value="{StaticResource SLD.FILL.DRAG}"/>
+                        <DataTrigger Binding="{Binding ElementName=PART_Track, Path=Thumb.IsDragging}" Value="true">
+                            <Setter TargetName="PART_SelectionRange" Property="Background" Value="{StaticResource SelectionDrag}"/>
                         </DataTrigger>
-                        <Trigger Property="IsEnabled" Value="false">
-                            <Setter TargetName="PART_SelectionRange" Property="Visibility" Value="Collapsed"/>
-                        </Trigger>
                     </ControlTemplate.Triggers>
                 </ControlTemplate>
             </Setter.Value>
